<?xml version="1.0"?>
<package format="3">
  <name>ros2_image_stress_test</name>
  <version>0.1.0</version>
  <description>ROS 2 Jazzy image publisher/subscriber stress test with latency logging.</description>
  <maintainer email="ubuntu@example.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>